--- a/scripts/OutputDifferences.html
+++ b/scripts/OutputDifferences.html
@@ -177,25 +177,25 @@ pre code {
 <thead>
 <tr class="header">
 <th align="left"></th>
-<th align="left">R squared</th>
+<th align="right">R squared</th>
 <th align="right">NRMSE</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
 <td align="left">atmos_c</td>
-<td align="left">1</td>
-<td align="right">0</td>
+<td align="right">1.000</td>
+<td align="right">0.000</td>
 </tr>
 <tr class="even">
 <td align="left">Ftot</td>
-<td align="left">1</td>
-<td align="right">0</td>
+<td align="right">1.000</td>
+<td align="right">0.000</td>
 </tr>
 <tr class="odd">
 <td align="left">Tgav</td>
-<td align="left">1</td>
-<td align="right">0</td>
+<td align="right">1.000</td>
+<td align="right">0.000</td>
 </tr>
 </tbody>
 </table>
